--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:label="@string/title_activity_test"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ChooseCompanyFragment" />
-        <activity android:name=".ChooseBranchFragment"></activity>
+        <activity android:name=".ChooseBranchFragment" />
     </application>
 
 </manifest>
