--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -15,7 +18,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:hardwareAccelerated="true"
         android:theme="@style/AppTheme.NoActionBar">
+
         <activity
             android:name=".LoginActivity"
             android:label="@string/app_name">
@@ -35,6 +40,10 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ChooseCompanyFragment" />
         <activity android:name=".ChooseBranchFragment" />
+
+        <meta-data android:name="com.here.android.maps.appid" android:value="1e85VUVssGSYpT2WDVwy"/>
+        <meta-data android:name="com.here.android.maps.apptoken" android:value="xwKGEdzAFLNws2n6vmgUcw"/>
+
     </application>
 
 </manifest>
