--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation(name:'HERE-sdk', ext:'aar')
     implementation 'org.locationtech.jts:jts-core:1.15.0'
+    compile 'com.loopj.android:android-async-http:1.4.9'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
