--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,6 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    implementation 'com.google.code.gson:gson:2.8.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
