--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':picasso', ':HERE-sdk', ':android-async-http-1.4.9'
+include ':app', ':picasso', ':android-async-http-1.4.9', ':HERE-sdk'
