--- a/android-app/app/src/main/AndroidManifest.xml
+++ b/android-app/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="apshirokov.cs.hse.iqueue">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
@@ -19,7 +20,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:hardwareAccelerated="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        tools:ignore="GoogleAppIndexingWarning">
 
         <activity
             android:name=".SplashActivity"
@@ -33,6 +35,10 @@
 
         <activity
             android:name=".LoginActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name=".RegistrationActivity"
             android:label="@string/app_name">
         </activity>
         <activity
